<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/button_buy"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buy"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorBg"
        android:text="@string/label_price"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buy"
        android:layout_toRightOf="@id/labelPrice"
        android:layout_gravity="end"
        android:paddingLeft="3dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorBg"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/labelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/labelPrice"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorBg"
        android:text="@string/label_amount"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/amountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/price"
        android:layout_toRightOf="@id/labelAmount"
        android:layout_alignTop="@id/labelAmount"
        android:paddingTop="7dp"
        android:paddingRight="10dp"
        android:paddingBottom="7dp"
        android:background="@color/colorBg"
        android:orientation="horizontal"
        android:gravity="center|end">
        <Button
            android:id="@+id/amountDecrease"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_amount_decrease"
            android:text="@string/button_amount_decrease"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/labelPrice"
            android:minWidth="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_amount"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/amountIncrease"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_amount_increase"
            android:text="@string/button_amount_increase"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/amountLayout"
        android:visibility="invisible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/itemImage"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/itemName"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/labelMerchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/itemDescription"
                android:text="@string/label_merchant"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:id="@+id/merchantPicture"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@id/labelMerchant"/>

            <TextView
                android:id="@+id/merchantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_below="@id/labelMerchant"
                android:layout_toRightOf="@id/merchantPicture"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>